Added nodelist-foreach-polyfill to docs bundle

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:docs": "babel docs/src/index.js --out-file docs/index.js && npm run lasso:docs && npm run clean:docs",
     "fix": "eslint src/index.js --fix",
     "lint": "eslint src/index.js > lint.txt && eslint docs/src/index.js > lint.txt",
-    "lasso:docs": "lasso require-run:./docs/index.js --out docs/static --inject-into docs/index.html --name bundle",
+    "lasso:docs": "lasso require-run:nodelist-foreach-polyfill require-run:./docs/index.js --out docs/static --inject-into docs/index.html --name bundle",
     "lasso:tests": "npm run clean:tests && lasso require-run:./test/index.js --name bundle-test --out test/static --config ./test/lasso-config.json",
     "clean:docs": "rimraf .cache build docs/index.js",
     "clean:tests": "rimraf lint.txt reports",
@@ -47,6 +47,7 @@
     "karma-html-reporter": "~0.2",
     "karma-jasmine": "^2",
     "lasso-cli": "^2",
+    "nodelist-foreach-polyfill": "^1",
     "onchange": "^5",
     "parallelshell": "^3",
     "puppeteer": "^1",
